fix(blog): cats and tags overlapped
also, add note about truncation caveat

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.css
@@ -138,10 +138,11 @@ ul.post-detail {
   min-width: 0; /* to support truncation */
 
   grid-template-areas:
-    'cats cats'
+    'cats tags'
     'attr attr'
     'head subh';
   /* To truncate 'subh' fully before truncating 'head' */
+  /* CAVEAT: 'cats' is truncated but 'tags' never is */
   grid-template-columns: minmax(0, max-content) 1fr;
 }
 :--article-item h3          { grid-area: head }
@@ -149,9 +150,9 @@ ul.post-detail {
 :--article-item .attr       { grid-area: attr }
 :--article-item .categories { grid-area: cats }
 :--article-item .tags {
+  grid-area: tags;
+
   /* To span top row and align right */
-  grid-row: 1 / 2;
-  grid-column: 1 / 3;
   justify-content: end;
 }
 
@@ -183,7 +184,8 @@ ul.post-detail {
 :--article-item .date span,
 :--article-item .byline a,
 :--article-item .tags li,
-:--article-item .categories li { @extend %x-truncate--one-line }
+:--article-item .categories li,
+:--article-item .categories::before { @extend %x-truncate--one-line }
 
 :--article-item .date { order: -1; }
 
@@ -224,6 +226,7 @@ ul.post-detail {
   color: var(--global-color-primary--xx-dark);
 }
 :--article-item .categories:empty:before {
+  /* CAVEAT: This text can not be truncated */
   content: 'Uncategorized';
 }
 
